# node

./: .gitignore  Cargo.toml  ENTERPRISE.md  PITCH.md  README.md  ROADMAP_0G.md  ROADMAP_SUBDOMAINS.md  import_phantom.py
.cargo/: config.toml
.github/workflows/: build-android-node.yml  ci.yml  deploy-aggregator.yml  patch-release-aggregator.yml  release.yml
agents/guardian/: package-lock.json  package.json
agents/guardian/src/: index.ts
crates/zerox1-aggregator/: Cargo.toml
crates/zerox1-aggregator/src/: api.rs  billing.rs  capital_flow.rs  lib.rs  llm_proxy.rs  main.rs  mpp.rs  podcast.rs  store.rs
crates/zerox1-aggregator/tests/: api_integration.rs
crates/zerox1-challenger/: Cargo.toml
crates/zerox1-challenger/src/: main.rs  monitor.rs  submit.rs
crates/zerox1-client/: Cargo.toml
crates/zerox1-client/src/: client.rs  lib.rs  types.rs
crates/zerox1-filedelivery-aggregator/: Cargo.toml
crates/zerox1-filedelivery-aggregator/src/: lib.rs
crates/zerox1-filedelivery-core/: Cargo.toml
crates/zerox1-filedelivery-core/src/: lib.rs
crates/zerox1-mailbox/: Cargo.toml
crates/zerox1-mailbox/skill/: SKILL.toml
crates/zerox1-mailbox/src/: agent.rs  cleanup.rs  config.rs  handler.rs  main.rs  node_client.rs  probe.rs  store.rs  watcher.rs
crates/zerox1-node/: Cargo.toml
crates/zerox1-node/src/: api.rs  bags.rs  batch.rs  challenge.rs  config.rs  constants.rs  cpmm.rs  escrow.rs  ffi.rs  identity.rs  inactive.rs  kora.rs  launchlab.rs  lease.rs  lib.rs  logger.rs  main.rs  mpp.rs  network.rs  node.rs  peer_state.rs  push_notary.rs  registry_8004.rs  reputation.rs  stake_lock.rs  submit.rs  task_log.rs  trade.rs
crates/zerox1-node/tests/: api_integration.rs
crates/zerox1-protocol/: Cargo.toml
crates/zerox1-protocol/src/: batch.rs  constants.rs  entropy.rs  envelope.rs  error.rs  hash.rs  lib.rs  message.rs  payload.rs
crates/zerox1-sati-client/: Cargo.toml
crates/zerox1-sati-client/src/: client.rs  error.rs  lib.rs
crates/zerox1-simulator/: Cargo.toml
crates/zerox1-simulator/src/: agent.rs  economy.rs  main.rs  report.rs  sim.rs
deploy/gcp/: configure-secrets.sh  deploy-binaries.sh  get-bootstrap-addrs.sh  provision.sh  startup.sh
deploy/systemd/: zerox1-aggregator.service  zerox1-node.service
docs/: 01-architecture-overview.md  02-protocol-specification.md  03-economic-layer-spec.md  04-constitutional-framework.md  05-p2p-protocol-implementation.md  06-apex-society-light-paper.md  07-agent-onboarding.md  08-agent-runtime-context.md
examples/guardian-npc/: package-lock.json  package.json
examples/guardian-npc/src/: index.ts
examples/guardian-npc/test/: quest.test.ts
programs/workspace/: Anchor.toml  Cargo.toml
programs/workspace/programs/agent-ownership/: Cargo.toml
programs/workspace/programs/agent-ownership/src/: lib.rs
programs/workspace/programs/behavior-log/: Cargo.toml
programs/workspace/programs/behavior-log/src/: lib.rs
programs/workspace/programs/challenge/: Cargo.toml
programs/workspace/programs/challenge/src/: lib.rs
programs/workspace/programs/escrow/: Cargo.toml
programs/workspace/programs/escrow/src/: lib.rs
programs/workspace/programs/lease/: Cargo.toml
programs/workspace/programs/lease/src/: lib.rs
programs/workspace/programs/stake-lock/: Cargo.toml
programs/workspace/programs/stake-lock/src/: lib.rs
scripts/: deploy-mainnet.sh
sdk/: LICENSE  package-lock.json  package.json
sdk/src/: index.ts
