[workspace]
resolver = "2"
members = [
    "crates/zerox1-protocol",
    "crates/zerox1-node",
    "crates/zerox1-aggregator",
    "crates/zerox1-simulator",
    "crates/zerox1-client",
    "crates/zerox1-mailbox",
    "crates/zerox1-filedelivery-core",
    "crates/zerox1-filedelivery-aggregator",
]

[workspace.package]
version = "0.5.1"
edition = "2021"
authors = ["zerox1"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
ciborium = "0.2"
sha2 = "0.10"
keccak = "0.1"
tiny-keccak = { version = "2", features = ["keccak"] }

# Crypto / keys
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Solana (used by 8004 registry, bags, trade, sweep — NOT settlement)
solana-sdk = "2.1"
solana-rpc-client = "2.1"

# libp2p
libp2p = { version = "0.54", features = [
    "tokio",
    "gossipsub",
    "kad",
    "mdns",
    "noise",
    "tcp",
    "quic",
    "dns",
    "yamux",
    "identify",
    "autonat",
    "relay",
    "dcutr",
    "request-response",
    "ping",
    "macros",
] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Utilities
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
hex = "0.4"
base64 = "0.22"
bincode = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
openssl = { version = "0.10", features = ["vendored"] }
axum = { version = "0.8", features = ["ws"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }

# File delivery
zerox1-filedelivery-core = { path = "crates/zerox1-filedelivery-core" }
zerox1-filedelivery-aggregator = { path = "crates/zerox1-filedelivery-aggregator" }
# zerox1-filedelivery-0g = { path = "../filedelivery/0g" }  # TODO: re-enable when 0g is back in scope

