[package]
name = "zerox1-aggregator"

[features]
# DataBounty campaign marketplace — IMU/GPS/audio/camera data collection.
# Only meaningful when the aggregator serves mobile nodes; off by default
# so server-only deployments don't expose unfinished endpoints.
data-bounty = []
version.workspace = true
edition.workspace = true

[[bin]]
name = "zerox1-aggregator"
path = "src/main.rs"

[dependencies]
axum       = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
hex        = { workspace = true }
base64     = { workspace = true }
tiny-keccak = { workspace = true }
clap       = { version = "4", features = ["derive", "env"] }
rusqlite   = { version = "0.32", features = ["bundled"] }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = "2.1"
petgraph   = "0.6"
reqwest    = { workspace = true }
ed25519-dalek = "2.1"
rand = "0.8"
bs58 = "0.5"
