[package]
name = "zerox1-aggregator"
version.workspace = true
edition.workspace = true

[features]
# DataBounty campaign marketplace — IMU/GPS/audio/camera data collection.
# Only meaningful when the aggregator serves mobile nodes; off by default
# so server-only deployments don't expose unfinished endpoints.
data-bounty = []
# Celo EVM settlement: executes approve_payment on ZeroxEscrow when a
# VERDICT is queued with dest_chain = 42220 (mainnet) or 44787 (testnet).
# Requires CELO_RPC_URL / CELO_ESCROW / CELO_PRIVATE_KEY to be set at runtime.
celo-settlement = ["dep:zerox1-settlement-celo"]
# Base EVM settlement: executes approve_payment on ZeroxEscrow when a
# VERDICT is queued with dest_chain = 8453 (mainnet) or 84532 (testnet).
# Requires BASE_RPC_URL / BASE_ESCROW / BASE_PRIVATE_KEY to be set at runtime.
base-settlement = ["dep:zerox1-settlement-base"]

[[bin]]
name = "zerox1-aggregator"
path = "src/main.rs"

[dependencies]
axum       = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
hex        = { workspace = true }
base64     = { workspace = true }
tiny-keccak = { workspace = true }
clap       = { version = "4", features = ["derive", "env"] }
rusqlite   = { version = "0.32", features = ["bundled"] }
solana-sdk = { workspace = true }
petgraph   = "0.6"
reqwest    = { workspace = true }
ed25519-dalek = "2.1"
rand = "0.8"
bs58 = "0.5"
zerox1-settlement-celo = { path = "../../../settlement/celo/client", optional = true }
zerox1-settlement-base = { path = "../../../settlement/base/client", optional = true }
