[package]
name    = "zerox1-challenger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zerox1-challenger"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { version = "4", features = ["derive", "env"] }
anyhow             = { workspace = true }
