[package]
name = "zerox1-filedelivery-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Adapter trait for out-of-band file delivery in the 0x01 protocol"
repository = "https://github.com/0x01-a2a/filedelivery"
homepage = "https://0x01.world"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
