[package]
name = "zerox1-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "zerox1-node"
path = "src/main.rs"

[lib]
name = "zerox1_node"
path = "src/lib.rs"
# When building for iOS, Cargo is invoked with --features ios-ffi and the
# crate-type is overridden to staticlib via the Xcode build script.  For all
# other targets (Android, server) rlib is correct and the binary still builds.
crate-type = ["staticlib", "rlib"]

[dependencies]
zerox1-protocol = { path = "../zerox1-protocol" }

serde = { workspace = true }
ciborium = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
bs58 = "0.5"

libp2p = { workspace = true }

solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }

async-trait = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true }
url = "2.5"
libc = "0.2"
openssl = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
axum = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }

zerox1-filedelivery-core = { workspace = true }
zerox1-filedelivery-0g   = { workspace = true }

[features]
default = []
ios-ffi = []
trade = []
bags  = ["trade"]
settlement = []
