[package]
name = "zerox1-sati-client"
version.workspace = true
edition.workspace = true

[dependencies]
zerox1-protocol = { path = "../zerox1-protocol" }

serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
