[package]
name = "zerox1-simulator"
version.workspace = true
edition.workspace = true
description = "Adversarial cartel simulator — derives α_min, β coefficients, and SRI threshold"

[[bin]]
name = "zerox1-simulator"
path = "src/main.rs"

[dependencies]
zerox1-protocol = { path = "../zerox1-protocol" }

rand       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
clap       = { version = "4", features = ["derive"] }
