[workspace]
resolver = "2"
members = [
    "programs/behavior-log",
    "programs/lease",
    "programs/challenge",
    "programs/stake-lock",
    "programs/escrow",
    "programs/agent-ownership",
]

# constant_time_eq 0.4.2 requires edition2024 (rustc >=1.85).
# Solana platform tools ship rustc 1.84.1. Override with a local copy
# that has edition = "2021" — functionally identical, just strips the
# edition constraint that prevents the SBF toolchain from parsing it.
[patch.crates-io]
constant_time_eq = { path = "vendor/constant_time_eq" }
# blake3 1.8.3 also requires edition2024; same fix.
blake3 = { path = "vendor/blake3" }


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
